8211123: GC Metaspace printing after full gc

Move GC printing to after usage is calculated

Co-authored-by: Jiapeng Li <nijiaben@perfma.com>
Reviewed-by: tschatzl, stuefe